MDEV-6924 : Server crashed on CREATE TABLE ... SELECT

Do not allow server to start if binlog_format is set
to a format other than ROW. Also restrict the change
of GLOBAL/SESSION binlog_format value at runtime.