sql/sys_vars.cc
@@ -280,6 +280,24 @@ static bool binlog_format_check(sys_var *self, THD *thd, set_var *var)
   if (check_has_super(self, thd, var))
     return true;
 
+#ifdef WITH_WSREP
+  /*
+    MariaDB Galera does not support STATEMENT or MIXED binlog format currently.
+  */
+  if (WSREP(thd) &&
+      var->save_result.ulonglong_value != BINLOG_FORMAT_ROW)
+  {
+    WSREP_ERROR("MariaDB Galera does not support binlog format: %s",
+                binlog_format_names[var->save_result.ulonglong_value]);
+
+    // Also push a warning because error message is general.
+    push_warning_printf(thd, MYSQL_ERROR::WARN_LEVEL_WARN, ER_UNKNOWN_ERROR,
+                        "MariaDB Galera does not support binlog format: %s",
+                        binlog_format_names[var->save_result.ulonglong_value]);
+    return true;
+  }
+#endif
+
   if (var->type == OPT_GLOBAL)
     return false;
 
@@ -307,26 +325,6 @@ static bool binlog_format_check(sys_var *self, THD *thd, set_var *var)
          ER_STORED_FUNCTION_PREVENTS_SWITCH_BINLOG_FORMAT,
          ER_INSIDE_TRANSACTION_PREVENTS_SWITCH_BINLOG_FORMAT))
     return true;
-
-#ifdef WITH_WSREP
-  /* MariaDB Galera does not support STATEMENT or MIXED binlog
-  format currently */
-  if (WSREP(thd) &&
-     (var->save_result.ulonglong_value == BINLOG_FORMAT_STMT ||
-      var->save_result.ulonglong_value == BINLOG_FORMAT_MIXED))
-  {
-    WSREP_DEBUG("MariaDB Galera does not support binlog format : %s",
-                var->save_result.ulonglong_value == BINLOG_FORMAT_STMT ?
-                "STATEMENT" : "MIXED");
-    /* Push also warning, because error message is general */
-     push_warning_printf(thd, MYSQL_ERROR::WARN_LEVEL_WARN,
-                        ER_UNKNOWN_ERROR,
-                        "MariaDB Galera does not support binlog format: %s",
-                        var->save_result.ulonglong_value == BINLOG_FORMAT_STMT ?
-                        "STATEMENT" : "MIXED");
-    return true;
-  }
-#endif
 
   return false;
 }
